2006-12-18  Marcus Brinkmann  <marcus@g10code.de>

	* cert.c (ksba_cert_release): Release cert->root and
	cert->asn_tree.
	(ksba_cert_read_der): Release cert->root and cert->asn_tree.
	* ber-decoder.c (_ksba_ber_decoder_decode): Release d->root.
	* asn1-func.c (do_expand_tree): Keep track of created nodes.
	(copy_tree): Likewise.
	(_ksba_asn_insert_copy): Likewise.
	(ksba_asn_tree_dump): Release tree if expanded.
	* asn1-func2.c (ksba_asn_create_tree): Keep track of created
	nodes.
	* asn1-parse.y (new_node): Fix assignment.

2006-11-29  Werner Koch  <wk@g10code.com>

	* ocsp.c (parse_single_response): Fixed skipping of the NULL.

	* cert.c (ksba_cert_get_image): Cast an arg for printf.

2006-10-18  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_get_key_usage): Map GPG_ERR_NO_VALUE to
	GPG_ERR_NO_DATA.  This is required in case no extensions at all
	are available.
	(ksba_cert_get_cert_policies, ksba_cert_get_ext_key_usages) 
	(ksba_cert_get_auth_key_id, get_simple_octet_string_ext): Ditto.

2006-08-31  Werner Koch  <wk@g10code.com>

	* ocsp.h (struct ocsp_extension_s): New.
	* ocsp.c (extract_nonce): Renamed to ..
	(parse_response_extensions): .. this. Extended to save all
	extensions.
	(release_ocsp_extensions): New.
	(ksba_ocsp_release): Release new extension data.
	(ksba_ocsp_parse_response): Reset extesnion data.
	(parse_optional_boolean): New.
	(parse_single_extensions): New.

	* ksba.m4: Implement --api-version check.
	* ksba-config.in (echo_api_version): New option --api-version.

	* crl.c (GPG_ERR_UNKNOWN_CRIT_EXTN): Removed definition as we now
	require a decent libgpg-error.

	* ocsp.c (ksba_ocsp_get_responder_id): Implemented.  Changed NAME
	from ksba_name_t* to char** and SHA1KEYHASH from unsigned char* to
	ksba_sexp_t*.  Given that the function has always returned an
	not_implemented error code and thus was not useful at all, we
	don't consider this as an ABI change (still pointers) and the API